--- a/portfolio-react-vite/src/components/contact-form.css
+++ b/portfolio-react-vite/src/components/contact-form.css
@@ -1,3 +1,7 @@
+.page.contact {
+  padding-bottom: 5rem;
+}
+
 .page.contact form {
   padding: 2rem;
   background-color: var(--color-white);
