--- a/portfolio-react-vite/src/components/header.css
+++ b/portfolio-react-vite/src/components/header.css
@@ -1,6 +1,7 @@
 header {
   background-color: var(--color-black);
-  position: fixed;
+  position: sticky;
+  top: 0;
   width: 100%;
   z-index: 100;
 }
